bug fixed in text align

--- a/css/main.css
+++ b/css/main.css
@@ -650,7 +650,7 @@ footer {
   font-size: 24px;
   left: 28px;
   margin-bottom: 27px;
-  text-align-last: left;
+  text-align: left;
   letter-spacing: -1.07143px;
 }
 
@@ -660,7 +660,7 @@ footer {
   font-size: 15px;
   line-height: 25px;
   color: #939CAA;
-  text-align-last: left;
+  text-align: left;
 }
 
 @media only screen and (max-width: 1136px) {
@@ -763,7 +763,7 @@ footer {
     padding: 24px 48px;
   }
   .guide__content {
-    width: 100% !important;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: -webkit-box !important;
@@ -773,18 +773,18 @@ footer {
     -webkit-box-direction: normal !important;
         -ms-flex-direction: column !important;
             flex-direction: column !important;
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .guide__title {
-    text-align: center !important;
+    text-align: center;
   }
   .guide__description {
     display: block;
     font-size: 15px;
     line-height: 25px;
-    text-align: center !important;
+    text-align: center;
   }
 }
 
