--- a/scss/blocks/_guide.scss
+++ b/scss/blocks/_guide.scss
@@ -80,13 +80,13 @@
     font-size: 24px;
     left: 28px;
     margin-bottom: 27px;
-    text-align-last: left;
+    text-align: left;
     letter-spacing: -1.07143px;
 }
 
 .guide__description {
     @include lexend-deca-p;
-    text-align-last: left;
+    text-align: left;
 }
 
 @media only screen and (max-width: $tablet) {
@@ -182,23 +182,23 @@
     }
 
     .guide__content {
-        width: 100% !important;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
         display: flex !important;
         flex-direction: column !important;
-        align-items: center !important;
+        align-items: center;
     }
 
     .guide__title {
-        text-align: center !important;
+        text-align: center;
     }
 
     .guide__description {
         display: block;
         font-size: 15px;
         line-height: 25px;
-        text-align: center !important;
+        text-align: center;
     }
 
     // negadir description ga text-align center tasir qilmayapti
